--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="stil.css">
+  <link rel="icon" href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/logo/favicon.ico">
   <title>Ana Sayfa</title>
 </head>
 
@@ -19,7 +20,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3 m-auto d-none d-lg-block">
-          <a href="index.html"><img class="logo" src="img/logo/mali.png" alt=""></a>
+          <a href="index.html"><img class="logo" src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/logo/mali.png" alt=""></a>
         </div>
         <div class="col-md-12 col-lg-9">
 
@@ -33,7 +34,7 @@
                 </div>
 
 
-                <a id='logo-small' class="navbar-brand" href="index.html"><img src="img/logo/mali.png" alt=""></a>
+                <a id='logo-small' class="navbar-brand" href="index.html"><img src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/logo/mali.png" alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -81,21 +82,21 @@
       </ul>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/1.jpg">
+          <img src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/1.jpg">
           <div class="carousel-caption">
             <h3>Ongan</h3>
             <p>Yazılımın baştan yazıldığı yer!</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/2.jpg" >
+          <img src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/2.jpg" >
           <div class="carousel-caption">
             <h3>Ongan</h3>
             <p>Yazılımın baştan yazıldığı yer!</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="img/3.jpg" >
+          <img src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/3.jpg" >
           <div class="carousel-caption">
             <h3>Ongan</h3>
             <p>Yazılımın baştan yazıldığı yer!</p>
@@ -123,7 +124,8 @@
 
       <div class="row featurette">
           <div class="col-md-7">
-          <h2 class="featurette-heading">Maskeli Maskesiz İnsanların Yolo V3 ile Tespiti</h2>
+            <a href="portfolyo3.html"
+                class="linkedtext" > <h2 class="featurette-heading">Maskeli Maskesiz İnsanların Yolo V3 ile Tespiti</h2></a>
           <p class="lead">Makine Öğrenimi Stajyeri olarak çalıştığım Autonom şirketinde güncel sorunlardan yola çıkarak maskeli mi maskesiz mi sorusunun YoloV3 kullanarak gerçek zamanlı tespitini gerçekleştirdim... <a href="portfolyo3.html"
               class="vtext" > devamını oku</a></p>
         </div>
@@ -132,7 +134,7 @@
             aria-label="Placeholder: 500x500">
             <title>Maskeli Maskesiz İnsanların Yolo V3 ile Tespiti</title>
             <rect width="100%" height="100%" fill="#eee" />
-            <image href="img/ana3.png" />
+            <a href="portfolyo3.html" ><image href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/ana3.png" /></a>
           </svg>
         </div>
       </div>
@@ -141,7 +143,8 @@
 
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading">Image Cropper</h2>
+          <a href="portfolyo2.html"
+              class="linkedtext" > <h2 class="featurette-heading">Image Cropper</h2></a>
           <p class="lead">Üniversite yaz stajımı yaparken yazdığım bu script girilen piksel değerlerine göre verilen görüntüyü kırpar... <a href="portfolyo2.html" class="vtext" > devamını oku</a></p>
         </div>
         <div class="col-md-5 order-md-1">
@@ -149,7 +152,7 @@
             aria-label="Placeholder: 500x500">
             <title>Image Cropper</title>
             <rect width="100%" height="100%" fill="#eee" />
-            <image href="img/ana2.png" />
+            <a href="portfolyo2.html"> <image href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/ana2.png" /></a>
           </svg>
         </div>
       </div>
@@ -158,7 +161,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Google Görsellerden Toplu Resim İndirme</h2>
+          <a href="portfolyo1.html"
+              class="linkedtext" > <h2 class="featurette-heading">Google Görsellerden Toplu Resim İndirme</h2></a>
           <p class="lead">Michael Sallomi tarafından oluşturulmuş bu metotta makine öğrenmesi, derin öğrenme vb. için Google görsellerden nasıl resim toplanacağı anlatılacaktır... <a href="portfolyo1.html" class="vtext" > devamını oku</a></p>
         </div>
         <div class="col-md-5">
@@ -166,7 +170,7 @@
             aria-label="Placeholder: 500x500">
             <title>Google Görsellerden Toplu Resim İndirme</title>
             <rect width="100%" height="100%" fill="#eee" />
-            <image href="img/ana1.png" />
+             <a href="portfolyo1.html"><image href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/ana1.png" /></a>
           </svg>
         </div>
       </div>
@@ -189,12 +193,12 @@
 
               <li class="widget-container widget_nav_menu">
 
-                <h1 class="title-widget">SİTE HARİTASI</h1>
+                <h1 class="title-widget">Site Haritası</h1>
 
                 <ul>
-                  <li><a class="vtext" href="index.html"><i class="fa fa-angle-double-right vtext"></i>ANA SAYFA</a></li>
-                  <li><a class="vtext" href="hakkimda.html"><i class="fa fa-angle-double-right vtext"></i>HAKKIMDA</a></li>
-                  <li><a class="vtext" href="iletisim.html"><i class="fa fa-angle-double-right vtext"></i>İLETİŞİM</a></li>
+                  <li><a class="vtext" href="index.html"><i class="fa fa-angle-double-right vtext"></i>Ana Sayfa</a></li>
+                  <li><a class="vtext" href="hakkimda.html"><i class="fa fa-angle-double-right vtext"></i>Hakkımda</a></li>
+                  <li><a class="vtext" href="iletisim.html"><i class="fa fa-angle-double-right vtext"></i>İletişim</a></li>
                 </ul>
 
               </li>
@@ -212,12 +216,12 @@
 
               <li class="widget-container widget_nav_menu">
 
-                <h1 class="title-widget">PROJELER</h1>
+                <h1 class="title-widget">Portfolyo</h1>
 
                 <ul>
-                <li><a class="vtext" href="portfolyo3.html"><i class="fa fa-angle-double-right vtext"></i>GÖRÜNTÜ İŞLEME PROJESİ</a></li>
-                  <li><a class="vtext" href="portfolyo1.html"><i class="fa fa-angle-double-right vtext"></i>GOOGLE'DAN TOPLU RESİM İNDİRME</a></li>
-                  <li><a class="vtext" href="portfolyo2.html"><i class="fa fa-angle-double-right vtext"></i>IMAGE CROPPER</a></li>
+                <li><a class="vtext" href="portfolyo3.html"><i class="fa fa-angle-double-right vtext"></i>Görüntü İşleme Projesi̇</a></li>
+                  <li><a class="vtext" href="portfolyo1.html"><i class="fa fa-angle-double-right vtext"></i>Google'dan Toplu Resim İndirme</a></li>
+                  <li><a class="vtext" href="portfolyo2.html"><i class="fa fa-angle-double-right vtext"></i>Image Cropper</a></li>
                 </ul>
               </li>
 
@@ -234,12 +238,12 @@
 
               <li class="widget-container widget_nav_menu">
 
-                <h1 class="title-widget">HESAPLAR</h1>
+                <h1 class="title-widget">Hesaplar</h1>
 
                 <ul>
-                  <li><a class="vtext" href="https://www.linkedin.com/in/maliongan/"><i class="fa fa-angle-double-right vtext"></i>LINKEDIN</a></li>
-                  <li><a class="vtext" href="https://github.com/alimehmet"><i class="fa fa-angle-double-right vtext"></i>GITHUB</a></li>
-                  <li><a class="vtext" href="https://www.hackerrank.com/maliongan/"><i class="fa fa-angle-double-right vtext"></i>HACKERRANK</a></li>
+                  <li><a class="vtext" href="https://www.linkedin.com/in/maliongan/"><i class="fa fa-angle-double-right vtext"></i>LinkedIn</a></li>
+                  <li><a class="vtext" href="https://github.com/alimehmet"><i class="fa fa-angle-double-right vtext"></i>GitHub</a></li>
+                  <li><a class="vtext" href="https://www.hackerrank.com/maliongan/"><i class="fa fa-angle-double-right vtext"></i>Hackerrank</a></li>
                 </ul>
               </li>
 
@@ -257,11 +261,11 @@
 
               <li class="widget-container widget_recent_news">
 
-                <h1 class="title-widget">İLETİŞİM BİLGİLERİ</h1>
+                <h1 class="title-widget">İletişim Bilgileri</h1>
 
                 <div class="footerp">
 
-                  <h2 class="title-median">Mehmet Ali Ongan</h2>
+                  <h3 class="title-median">Mehmet Ali Ongan</h3>
                   <p><b><i class="fa fa-envelope"></i>
                     </b> <a href="mailto:maliongan@hotmail.com" class="vtext"> maliongan@hotmail.com</a></p>
                   <p><b><i class="fa fa-map-marker" aria-hidden="true"></i></b> Istanbul/Turkey</p>
