--- a/portfolyo2.html
+++ b/portfolyo2.html
@@ -13,8 +13,8 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="icon" href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/logo/favicon.ico">
   <link rel="stylesheet" href="stil.css">
   <title>Image Cropper</title>
 </head>
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3 m-auto d-none d-lg-block">
-          <a href="index.html"><img class="logo" src="img/logo/mali.png" alt=""></a>
+          <a href="index.html"><img class="logo" src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/logo/mali.png" alt=""></a>
         </div>
         <div class="col-md-12 col-lg-9">
 
@@ -38,7 +38,7 @@
                 </div>
 
 
-                <a id='logo-small' class="navbar-brand" href="index.html"><img src="img/logo/mali.png" alt=""></a>
+                <a id='logo-small' class="navbar-brand" href="index.html"><img src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/logo/mali.png" alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -96,12 +96,12 @@
 
               <li class="widget-container widget_nav_menu">
 
-                <h1 class="title-widget">SİTE HARİTASI</h1>
+                <h1 class="title-widget">Site Haritası</h1>
 
                 <ul>
-                  <li><a class="vtext" href="index.html"><i class="fa fa-angle-double-right vtext"></i>ANA SAYFA</a></li>
-                  <li><a class="vtext" href="hakkimda.html"><i class="fa fa-angle-double-right vtext"></i>HAKKIMDA</a></li>
-                  <li><a class="vtext" href="iletisim.html"><i class="fa fa-angle-double-right vtext"></i>İLETİŞİM</a></li>
+                  <li><a class="vtext" href="index.html"><i class="fa fa-angle-double-right vtext"></i>Ana Sayfa</a></li>
+                  <li><a class="vtext" href="hakkimda.html"><i class="fa fa-angle-double-right vtext"></i>Hakkımda</a></li>
+                  <li><a class="vtext" href="iletisim.html"><i class="fa fa-angle-double-right vtext"></i>İletişim</a></li>
                 </ul>
 
               </li>
@@ -119,12 +119,12 @@
 
               <li class="widget-container widget_nav_menu">
 
-                <h1 class="title-widget">PROJELER</h1>
+                <h1 class="title-widget">Portfolyo</h1>
 
                 <ul>
-                <li><a class="vtext" href="portfolyo3.html"><i class="fa fa-angle-double-right vtext"></i>GÖRÜNTÜ İŞLEME PROJESİ</a></li>
-                  <li><a class="vtext" href="portfolyo1.html"><i class="fa fa-angle-double-right vtext"></i>GOOGLE'DAN TOPLU RESİM İNDİRME</a></li>
-                  <li><a class="vtext" href="portfolyo2.html"><i class="fa fa-angle-double-right vtext"></i>IMAGE CROPPER</a></li>
+                <li><a class="vtext" href="portfolyo3.html"><i class="fa fa-angle-double-right vtext"></i>Görüntü İşleme Projesi̇</a></li>
+                  <li><a class="vtext" href="portfolyo1.html"><i class="fa fa-angle-double-right vtext"></i>Google'dan Toplu Resim İndirme</a></li>
+                  <li><a class="vtext" href="portfolyo2.html"><i class="fa fa-angle-double-right vtext"></i>Image Cropper</a></li>
                 </ul>
               </li>
 
@@ -141,12 +141,12 @@
 
               <li class="widget-container widget_nav_menu">
 
-                <h1 class="title-widget">HESAPLAR</h1>
+                <h1 class="title-widget">Hesaplar</h1>
 
                 <ul>
-                  <li><a class="vtext" href="https://www.linkedin.com/in/maliongan/"><i class="fa fa-angle-double-right vtext"></i>LINKEDIN</a></li>
-                  <li><a class="vtext" href="https://github.com/alimehmet"><i class="fa fa-angle-double-right vtext"></i>GITHUB</a></li>
-                  <li><a class="vtext" href="https://www.hackerrank.com/maliongan/"><i class="fa fa-angle-double-right vtext"></i>HACKERRANK</a></li>
+                  <li><a class="vtext" href="https://www.linkedin.com/in/maliongan/"><i class="fa fa-angle-double-right vtext"></i>LinkedIn</a></li>
+                  <li><a class="vtext" href="https://github.com/alimehmet"><i class="fa fa-angle-double-right vtext"></i>GitHub</a></li>
+                  <li><a class="vtext" href="https://www.hackerrank.com/maliongan/"><i class="fa fa-angle-double-right vtext"></i>Hackerrank</a></li>
                 </ul>
               </li>
 
@@ -164,11 +164,11 @@
 
               <li class="widget-container widget_recent_news">
 
-                <h1 class="title-widget">İLETİŞİM BİLGİLERİ</h1>
+                <h1 class="title-widget">İletişim Bilgileri</h1>
 
                 <div class="footerp">
 
-                  <h2 class="title-median">Mehmet Ali Ongan</h2>
+                  <h3 class="title-median">Mehmet Ali Ongan</h3>
                   <p><b><i class="fa fa-envelope"></i>
                     </b> <a href="mailto:maliongan@hotmail.com" class="vtext"> maliongan@hotmail.com</a></p>
                   <p><b><i class="fa fa-map-marker" aria-hidden="true"></i></b> Istanbul/Turkey</p>
