--- a/hakkimda.html
+++ b/hakkimda.html
@@ -95,7 +95,7 @@
           <br>
           Not me.
           <br>
-          Because I can make every great idea I have into a reality by coding and developing inventive software solutions. </h5>
+          Because I can make every great idea I have into a reality by creating successful project. </h5>
           <div class="container-xl"><img class="img-fluid" id="anas" src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/bc7cc4cdff31a17c45899401ee2e1478b6b458ad/img/aboutme.png" alt="" width="%100" height="430px"></div>
 
       </div>
