--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="icon" href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/logo/favicon.ico">
   <link rel="stylesheet" href="stil.css">
-  <title>Hakkımda</title>
+  <title>About Me</title>
 </head>
 
 <body>
@@ -47,7 +47,6 @@
                   <a class="navbar-brand" href="index.html">Ongan</a>
                 </div>
 
-
                 <a id='logo-small' class="navbar-brand" href="index.html"><img src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/logo/mali.png" alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,22 +56,21 @@
                 <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index.html">Ana Sayfa<span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link"  href="hakkimda.html">Hakkımda<span class="sr-only"></span></a>
-
+                      <a class="nav-link" href="about.html">About<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolyo</a>
+                      <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
                       <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item"  href="portfolyo3.html">Görüntü İşleme Projesi</a>
-                        <a class="dropdown-item"  href="portfolyo2.html">Image Croper</a>
-                        <a class="dropdown-item"  href="portfolyo1.html">Google'dan Toplu Resim İndirme</a>
+                        <a class="dropdown-item" href="portfolio3.html">Image Processing Project</a>
+                        <a class="dropdown-item" href="portfolio2.html">Image Cropper</a>
+                        <a class="dropdown-item" href="portfolio1.html">Bulk Image Download from Google</a>
                       </div>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="iletisim.html">İletişim</a>
+                      <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                   </ul>
 
@@ -95,8 +93,8 @@
           <br>
           Not me.
           <br>
-          Because I can make every great idea I have into a reality by creating successful project. </h5>
-          <div class="container-xl"><img class="img-fluid" id="anas" src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/bc7cc4cdff31a17c45899401ee2e1478b6b458ad/img/aboutme.png" alt="" width="%100" height="430px"></div>
+          Because I can make every great idea I have into a reality by creating successful projects.</h5>
+          <div class="container-xl"><img class="img-fluid" id="anas" src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/bc7cc4cdff31a17c45899401ee2e1478b6b458ad/img/aboutme.png" alt="" width="100%" height="430px"></div>
 
       </div>
     </div>
@@ -113,22 +111,19 @@
 
             <li class="widget-container widget_nav_menu">
 
-              <h1 class="title-widget">Site Haritası</h1>
+              <h1 class="title-widget">Site Map</h1>
 
               <ul>
-                <li><a class="vtext" href="index.html"><i class="fa fa-angle-double-right vtext"></i>Ana Sayfa</a></li>
-                <li><a class="vtext" href="hakkimda.html"><i class="fa fa-angle-double-right vtext"></i>Hakkımda</a></li>
-                <li><a class="vtext" href="iletisim.html"><i class="fa fa-angle-double-right vtext"></i>İletişim</a></li>
+                <li><a class="vtext" href="index.html"><i class="fa fa-angle-double-right vtext"></i>Home</a></li>
+                <li><a class="vtext" href="about.html"><i class="fa fa-angle-double-right vtext"></i>About</a></li>
+                <li><a class="vtext" href="contact.html"><i class="fa fa-angle-double-right vtext"></i>Contact</a></li>
               </ul>
 
             </li>
 
           </ul>
 
-
         </div>
-
-
 
         <div class="col-lg-3 col-md-3">
 
@@ -136,21 +131,18 @@
 
             <li class="widget-container widget_nav_menu">
 
-              <h1 class="title-widget">Portfolyo</h1>
+              <h1 class="title-widget">Portfolio</h1>
 
               <ul>
-              <li><a class="vtext" href="portfolyo3.html"><i class="fa fa-angle-double-right vtext"></i>Görüntü İşleme Projesi̇</a></li>
-                <li><a class="vtext" href="portfolyo1.html"><i class="fa fa-angle-double-right vtext"></i>Google'dan Toplu Resim İndirme</a></li>
-                <li><a class="vtext" href="portfolyo2.html"><i class="fa fa-angle-double-right vtext"></i>Image Cropper</a></li>
+              <li><a class="vtext" href="portfolio3.html"><i class="fa fa-angle-double-right vtext"></i>Image Processing Project</a></li>
+                <li><a class="vtext" href="portfolio1.html"><i class="fa fa-angle-double-right vtext"></i>Bulk Image Download from Google</a></li>
+                <li><a class="vtext" href="portfolio2.html"><i class="fa fa-angle-double-right vtext"></i>Image Cropper</a></li>
               </ul>
             </li>
 
           </ul>
 
-
         </div>
-
-
 
         <div class="col-lg-3 col-md-3">
 
@@ -158,7 +150,7 @@
 
             <li class="widget-container widget_nav_menu">
 
-              <h1 class="title-widget">Hesaplar</h1>
+              <h1 class="title-widget">Accounts</h1>
 
               <ul>
                 <li><a class="vtext" href="https://www.linkedin.com/in/maliongan/"><i class="fa fa-angle-double-right vtext"></i>LinkedIn</a></li>
@@ -169,19 +161,15 @@
 
           </ul>
 
-
         </div>
 
-
         <div class="col-lg-3 col-md-3">
-
-
 
           <ul class="list-unstyled clear-margins">
 
             <li class="widget-container widget_recent_news">
 
-              <h1 class="title-widget">İletişim Bilgileri</h1>
+              <h1 class="title-widget">Contact Information</h1>
 
               <div class="footerp">
 
@@ -198,7 +186,7 @@
                   <a href="https://www.linkedin.com/in/maliongan/"><i class="fa fa-linkedin-square fa-3x social-li" id="social"></i></a>
                   <a href="https://github.com/alimehmet/"><i class="fa fa-github-square fa-3x social-gh" id="social"></i></a>
                   <a href="https://www.hackerrank.com/maliongan/"><i class="fab fa-hackerrank fa-3x social-hr" id="social"></i></a>
-                  <a href="mailto:maliongan@gmail.com"><i class="fa fa-envelope-square fa-3x social-em" id="social"></i></a>
+                  <a href="mailto:maliongan@hotmail.com"><i class="fa fa-envelope-square fa-3x social-em" id="social"></i></a>
 
                 </ul>
               </div>
@@ -219,7 +207,7 @@
 
           <div class="copyright">
 
-            © 2021 Ongan Tüm hakları saklıdır.
+            © 2025 Ongan All rights reserved.
 
           </div>
 
@@ -228,7 +216,7 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 
           <div class="design">
-            <a href="#top" id="sayfabasi"><i class="fas fa-arrow-up"></i>  Sayfa başına dön</a>
+            <a href="#top" id="sayfabasi"><i class="fas fa-arrow-up"></i> Back to top</a>
           </div>
 
         </div>
