--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="stil.css">
   <link rel="icon" href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/logo/favicon.ico">
-  <title>Ana Sayfa</title>
+  <title>Home Page</title>
 </head>
 
 <body>
@@ -33,7 +33,6 @@
                   <a class="navbar-brand" href="index.html">Ongan</a>
                 </div>
 
-
                 <a id='logo-small' class="navbar-brand" href="index.html"><img src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/logo/mali.png" alt=""></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,25 +42,23 @@
                 <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                   <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index.html">Ana Sayfa<span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link"  href="hakkimda.html">Hakkımda<span class="sr-only"></span></a>
-
+                      <a class="nav-link" href="about.html">About<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolyo</a>
+                      <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
                       <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item"  href="portfolyo3.html">Görüntü İşleme Projesi</a>
-                        <a class="dropdown-item"  href="portfolyo2.html">Image Croper</a>
-                        <a class="dropdown-item"  href="portfolyo1.html">Google'dan Toplu Resim İndirme</a>
+                        <a class="dropdown-item" href="portfolio3.html">Image Processing Project</a>
+                        <a class="dropdown-item" href="portfolio2.html">Image Cropper</a>
+                        <a class="dropdown-item" href="portfolio1.html">Bulk Image Download from Google</a>
                       </div>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="iletisim.html">İletişim</a>
+                      <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                   </ul>
-
                 </div>
               </div>
             </div>
@@ -85,21 +82,21 @@
           <img src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/1.jpg">
           <div class="carousel-caption">
             <h3>Ongan</h3>
-            <p>Yazılımın baştan yazıldığı yer!</p>
+            <p>Where software is rewritten from scratch!</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/2.jpg" >
           <div class="carousel-caption">
             <h3>Ongan</h3>
-            <p>Yazılımın baştan yazıldığı yer!</p>
+            <p>Where software is rewritten from scratch!</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/3.jpg" >
           <div class="carousel-caption">
             <h3>Ongan</h3>
-            <p>Yazılımın baştan yazıldığı yer!</p>
+            <p>Where software is rewritten from scratch!</p>
           </div>
         </div>
       </div>
@@ -112,29 +109,24 @@
     </div>
 
     <div class="container marketing">
-
       <div class="row">
         <div class="col-xs-12 col-md-8">
 
         </div>
-
       </div>
 
       <hr class="featurette-divider" id="anas">
 
       <div class="row featurette">
           <div class="col-md-7">
-            <a href="portfolyo3.html"
-                class="linkedtext" > <h2 class="featurette-heading">Maskeli Maskesiz İnsanların Yolo V3 ile Tespiti</h2></a>
-          <p class="lead">Makine Öğrenimi Stajyeri olarak çalıştığım Autonom şirketinde güncel sorunlardan yola çıkarak maskeli mi maskesiz mi sorusunun YoloV3 kullanarak gerçek zamanlı tespitini gerçekleştirdim... <a href="portfolyo3.html"
-              class="vtext" > devamını oku</a></p>
+            <a href="portfolio3.html" class="linkedtext"><h2 class="featurette-heading">Detection of Masked and Unmasked People Using Yolo V3</h2></a>
+          <p class="lead">While working as a Machine Learning Intern at Autonom, I utilized YoloV3 for real-time detection of whether people were wearing masks, inspired by current issues... <a href="portfolio3.html" class="vtext">read more</a></p>
         </div>
         <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"
-            aria-label="Placeholder: 500x500">
-            <title>Maskeli Maskesiz İnsanların Yolo V3 ile Tespiti</title>
+          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
+            <title>Detection of Masked and Unmasked People Using Yolo V3</title>
             <rect width="100%" height="100%" fill="#eee" />
-            <a href="portfolyo3.html" ><image href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/ana3.png" /></a>
+            <a href="portfolio3.html"><image href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/ana3.png" /></a>
           </svg>
         </div>
       </div>
@@ -143,16 +135,14 @@
 
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-          <a href="portfolyo2.html"
-              class="linkedtext" > <h2 class="featurette-heading">Image Cropper</h2></a>
-          <p class="lead">Üniversite yaz stajımı yaparken yazdığım bu script girilen piksel değerlerine göre verilen görüntüyü kırpar... <a href="portfolyo2.html" class="vtext" > devamını oku</a></p>
+          <a href="portfolio2.html" class="linkedtext"><h2 class="featurette-heading">Image Cropper</h2></a>
+          <p class="lead">This script, written during my university summer internship, crops the given image based on the entered pixel values... <a href="portfolio2.html" class="vtext">read more</a></p>
         </div>
         <div class="col-md-5 order-md-1">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"
-            aria-label="Placeholder: 500x500">
+          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
             <title>Image Cropper</title>
             <rect width="100%" height="100%" fill="#eee" />
-            <a href="portfolyo2.html"> <image href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/ana2.png" /></a>
+            <a href="portfolio2.html"><image href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/ana2.png" /></a>
           </svg>
         </div>
       </div>
@@ -161,125 +151,76 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <a href="portfolyo1.html"
-              class="linkedtext" > <h2 class="featurette-heading">Google Görsellerden Toplu Resim İndirme</h2></a>
-          <p class="lead">Michael Sallomi tarafından oluşturulmuş bu metotta makine öğrenmesi, derin öğrenme vb. için Google görsellerden nasıl resim toplanacağı anlatılacaktır... <a href="portfolyo1.html" class="vtext" > devamını oku</a></p>
+          <a href="portfolio1.html" class="linkedtext"><h2 class="featurette-heading">Bulk Image Download from Google</h2></a>
+          <p class="lead">In this method created by Michael Sallomi, it is explained how to collect images from Google Images for machine learning, deep learning, etc... <a href="portfolio1.html" class="vtext">read more</a></p>
         </div>
         <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"
-            aria-label="Placeholder: 500x500">
-            <title>Google Görsellerden Toplu Resim İndirme</title>
+          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
+            <title>Bulk Image Download from Google</title>
             <rect width="100%" height="100%" fill="#eee" />
-             <a href="portfolyo1.html"><image href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/ana1.png" /></a>
+            <a href="portfolio1.html"><image href="https://raw.githubusercontent.com/alimehmet/alimehmet.github.io/main/img/ana1.png" /></a>
           </svg>
         </div>
       </div>
 
       <hr class="featurette-divider">
-
-      <!-- /END THE FEATURETTES -->
-
-    </div><!-- /.container -->
-
+    </div>
 
     <!--footer-->
     <footer class="footer1">
       <div class="container">
-
         <div class="row">
-
           <div class="col-lg-3 col-md-3">
             <ul class="list-unstyled clear-margins">
-
               <li class="widget-container widget_nav_menu">
-
-                <h1 class="title-widget">Site Haritası</h1>
-
+                <h1 class="title-widget">Site Map</h1>
                 <ul>
-                  <li><a class="vtext" href="index.html"><i class="fa fa-angle-double-right vtext"></i>Ana Sayfa</a></li>
-                  <li><a class="vtext" href="hakkimda.html"><i class="fa fa-angle-double-right vtext"></i>Hakkımda</a></li>
-                  <li><a class="vtext" href="iletisim.html"><i class="fa fa-angle-double-right vtext"></i>İletişim</a></li>
-                </ul>
-
-              </li>
-
-            </ul>
-
-
-          </div>
-
-
-
-          <div class="col-lg-3 col-md-3">
-
-            <ul class="list-unstyled clear-margins">
-
-              <li class="widget-container widget_nav_menu">
-
-                <h1 class="title-widget">Portfolyo</h1>
-
-                <ul>
-                <li><a class="vtext" href="portfolyo3.html"><i class="fa fa-angle-double-right vtext"></i>Görüntü İşleme Projesi̇</a></li>
-                  <li><a class="vtext" href="portfolyo1.html"><i class="fa fa-angle-double-right vtext"></i>Google'dan Toplu Resim İndirme</a></li>
-                  <li><a class="vtext" href="portfolyo2.html"><i class="fa fa-angle-double-right vtext"></i>Image Cropper</a></li>
+                  <li><a class="vtext" href="index.html"><i class="fa fa-angle-double-right vtext"></i>Home</a></li>
+                  <li><a class="vtext" href="about.html"><i class="fa fa-angle-double-right vtext"></i>About</a></li>
+                  <li><a class="vtext" href="contact.html"><i class="fa fa-angle-double-right vtext"></i>Contact</a></li>
                 </ul>
               </li>
-
             </ul>
-
-
           </div>
-
-
-
           <div class="col-lg-3 col-md-3">
-
             <ul class="list-unstyled clear-margins">
-
               <li class="widget-container widget_nav_menu">
-
-                <h1 class="title-widget">Hesaplar</h1>
-
+                <h1 class="title-widget">Portfolio</h1>
+                <ul>
+                <li><a class="vtext" href="portfolio3.html"><i class="fa fa-angle-double-right vtext"></i>Image Processing Project</a></li>
+                  <li><a class="vtext" href="portfolio1.html"><i class="fa fa-angle-double-right vtext"></i>Bulk Image Download from Google</a></li>
+                  <li><a class="vtext" href="portfolio2.html"><i class="fa fa-angle-double-right vtext"></i>Image Cropper</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-md-3">
+            <ul class="list-unstyled clear-margins">
+              <li class="widget-container widget_nav_menu">
+                <h1 class="title-widget">Accounts</h1>
                 <ul>
                   <li><a class="vtext" href="https://www.linkedin.com/in/maliongan/"><i class="fa fa-angle-double-right vtext"></i>LinkedIn</a></li>
                   <li><a class="vtext" href="https://github.com/alimehmet"><i class="fa fa-angle-double-right vtext"></i>GitHub</a></li>
                   <li><a class="vtext" href="https://www.hackerrank.com/maliongan/"><i class="fa fa-angle-double-right vtext"></i>Hackerrank</a></li>
                 </ul>
               </li>
-
             </ul>
-
-
           </div>
-
-
           <div class="col-lg-3 col-md-3">
-
-
-
             <ul class="list-unstyled clear-margins">
-
               <li class="widget-container widget_recent_news">
-
-                <h1 class="title-widget">İletişim Bilgileri</h1>
-
+                <h1 class="title-widget">Contact Information</h1>
                 <div class="footerp">
-
                   <h3 class="title-median">Mehmet Ali Ongan</h3>
-                  <p><b><i class="fa fa-envelope"></i>
-                    </b> <a href="mailto:maliongan@hotmail.com" class="vtext"> maliongan@hotmail.com</a></p>
+                  <p><b><i class="fa fa-envelope"></i></b> <a href="mailto:maliongan@hotmail.com" class="vtext"> maliongan@hotmail.com</a></p>
                   <p><b><i class="fa fa-map-marker" aria-hidden="true"></i></b> Istanbul/Turkey</p>
                 </div>
-
                 <div class="social-icons">
-
                   <ul class="nomargin">
-
                     <a href="https://www.linkedin.com/in/maliongan/"><i class="fa fa-linkedin-square fa-3x social-li" id="social"></i></a>
                     <a href="https://github.com/alimehmet/"><i class="fa fa-github-square fa-3x social-gh" id="social"></i></a>
                     <a href="https://www.hackerrank.com/maliongan/"><i class="fab fa-hackerrank fa-3x social-hr" id="social"></i></a>
-                    <a href="mailto:maliongan@gmail.com"><i class="fa fa-envelope-square fa-3x social-em" id="social"></i></a>
-
+                    <a href="mailto:maliongan@hotmail.com"><i class="fa fa-envelope-square fa-3x social-em" id="social"></i></a>
                   </ul>
                 </div>
               </li>
@@ -290,33 +231,20 @@
     </footer>
 
     <div class="footer-bottom">
-
       <div class="container">
-
         <div class="row">
-
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-
             <div class="copyright">
-
-              © 2021 Ongan Tüm hakları saklıdır.
-
+              © 2025 Ongan All rights reserved.
             </div>
-
           </div>
-
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-
             <div class="design">
-              <a href="#top" id="sayfabasi"><i class="fas fa-arrow-up"></i>  Sayfa başına dön</a>
+              <a href="#top" id="sayfabasi"><i class="fas fa-arrow-up"></i> Back to top</a>
             </div>
-
           </div>
-
         </div>
-
       </div>
-
     </div>
   </main>
 
